labs/week5/manifests/scenario1/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: alb
spec:
  controllerName: gateway.k8s.aws/alb
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gw
  namespace: demo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api-gateway.${MyDomain}
spec:
  gatewayClassName: alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: internet-facing-config
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: api-gateway.${MyDomain}
      tls:
        mode: Terminate
        options:
          elbv2.k8s.aws/certificate-arn: ${CERT_ARN}
      allowedRoutes:
        namespaces:
          from: Same
