labs/week5/manifests/scenario1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: demo
spec:
  parentRefs:
    - name: demo-gw
      sectionName: https
  hostnames:
    - api-gateway.${MyDomain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
